<resources>
    <string name="app_name">Github User</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nama">Name</string>
    <string name="profile_name">Nama</string>
    <string name="tab_1">Following</string>
    <string name="tab_2">Follower</string>
    <string name="username">Username</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="search">Search...</string>
    <string name="Username">Username</string>
    <string name="User_Detail">User Detail</string>
    <string name="User_photo">User\'s Photo</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_theme">Change Theme</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_user">Favorite User</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="supportBarTitle">Github</string>
</resources>